syntax = "proto3"
package protos

options go_package = "github.com/aaron-g-sanchez/SPOTIFY-CLI/internal/protos"

message TokenData {
  string AccessToken = 1;
  string RefreshToken = 2;
}


